manifests/bootstrapping-onprem/06-argocd/networking/external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: traefik.homelab.danmanners.com
  sessionAffinity: None
