manifests/bootstrapping-onprem/06-argocd/networking/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-web
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`argocd.homelab.danmanners.com`)
    kind: Rule
    services:
    - name: argo-cd-argocd-server
      port: 80
    middlewares:
    - name: http-https-redirectscheme
      namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.homelab.danmanners.com`)
    kind: Rule
    services:
    - name: argo-cd-argocd-server
      port: 80
  tls:
    secretName: argocd-cert
